k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: music-library
  labels:
    pod-security.kubernetes.io/enforce: baseline
